Styled all of the calendar events.

--- a/index.html
+++ b/index.html
@@ -34,51 +34,77 @@
               <td colspan="5">
               </td>
               <td class="text-right bold mega">1</td>
-              <td>2</td>
+              <td class="text-right bold mega">2</td>
             </tr>
 
             <tr>
-              <td>3
+              <td class="text-right bold mega">3
                 <div class="vostok">
                   <p class="not-bold milli text-left island-1-8 push-0">Vostok 3 & 6 launched</p>
                 </div>
               </td>
-              <td>4</td>
-              <td>5</td>
-              <td>6</td>
-              <td>7</td>
-              <td>8</td>
-              <td>9</td>
+              <td class="text-right bold mega">4</td>
+              <td class="text-right bold mega">5</td>
+              <td class="text-right bold mega">6</td>
+              <td class="text-right bold mega">7</td>
+              <td class="text-right bold mega">8</td>
+              <td class="text-right bold mega">9</td>
             </tr>
 
             <tr>
-              <td>10</td>
-              <td>11</td>
-              <td>12</td>
-              <td>13</td>
-              <td>14</td>
-              <td>15</td>
-              <td>16</td>
+              <td class="text-right bold mega">10</td>
+              <td class="text-right bold mega">11
+                <ol class="list-group">
+                  <li class="remembrance not-bold milli text-left island-1-8 push-1-8">Remembrance Day</li>
+                  <li class="kosmos not-bold milli text-left island-1-8 push-0">Kosmos 21 failed to escape orbit</li>
+                </ol>
+              </td>
+              <td class="text-right bold mega">12</td>
+              <td class="text-right bold mega">13</td>
+              <td class="text-right bold mega">14</td>
+              <td class="text-right bold mega">15
+                <ol class="list-group">
+                  <li class="nov-15 not-bold milli text-left island-1-8 push-1-8">Surtsey Island created</li>
+                  <li class="nov-15 not-bold milli text-left island-1-8 push-0">Robert W. Smith set altitude record</li>
+                </ol>
+              </td>
+              <td class="text-right bold mega">16</td>
             </tr>
 
             <tr>
-              <td>17</td>
-              <td>18</td>
-              <td>19</td>
-              <td>20</td>
-              <td>21</td>
-              <td>22</td>
-              <td>23</td>
+              <td class="text-right bold mega">17</td>
+              <td class="text-right bold mega">18</td>
+              <td class="text-right bold mega">19</td>
+              <td class="text-right bold mega">20</td>
+              <td class="text-right bold mega">21
+                <div class="vostok">
+                  <p class="not-bold milli text-left island-1-8 push-0">India launched its first rocket</p>
+                </div>
+              </td>
+              <td class="text-right bold mega">22
+                <div class="nov-22-23">
+                  <p class="not-bold milli text-left island-1-8 push-0">Death of Aldous Huxley</p>
+                </div>
+              </td>
+              <td class="text-right bold mega">23
+                <div class="nov-22-23">
+                  <p class="not-bold milli text-left island-1-8 push-0">Doctor Who premiered</p>
+                </div>
+              </td>
             </tr>
 
             <tr>
-              <td>24</td>
-              <td>25</td>
-              <td>26</td>
-              <td>27</td>
-              <td>28</td>
-              <td>29</td>
-              <td>30</td>
+              <td class="text-right bold mega">24</td>
+              <td class="text-right bold mega">25</td>
+              <td class="text-right bold mega">26
+                <div class="vostok">
+                  <p class="not-bold milli text-left island-1-8 push-0">Explorer 18 launched</p>
+                </div>
+              </td>
+              <td class="text-right bold mega">27</td>
+              <td class="text-right bold mega">28</td>
+              <td class="text-right bold mega">29</td>
+              <td class="text-right bold mega">30</td>
             </tr>
           </tbody>
         </table>
